[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "private-fm-orchestrator"
version = "1.0.0"
description = "Federated AI Orchestrator for per-learner namespace & checkpoint management"
authors = [
    {name = "Aivo Team", email = "dev@aivo.com"},
]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.5",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
